--- a/public/style/style.css
+++ b/public/style/style.css
@@ -35,3 +35,16 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+  .editB {
+    height: 20px;
+    width: 20px;
+  }
+
+  button {
+    margin-left: 20px;
+  }
+
+  ul {
+    list-style-type: none;
+  }
