--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,50 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Kalnia+Glaze:wght@100..700&display=swap');
+
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
   
   /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
   
   /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
   
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-  .editB {
-    height: 20px;
-    width: 20px;
-  }
+.editB {
+  height: 20px;
+  width: 20px;
+}
 
-  button {
-    margin-left: 20px;
-  }
+button {
+  margin-left: 20px;
+  background-color: #016273;
+}
 
-  ul {
+
+
+@media (prefers-color-scheme:dark) {
+  :root {
+      color-scheme: dark;
+      --bg: #212121;
+      --accent-bg: #2b2b2b;
+      --text: #dcdcdc;
+      --text-light: #ababab;
+      --accent: #016273;
+      --accent-hover: #2995A7;
+      --accent-text: var(--bg);
+      --code: #f06292;
+      --preformatted: #ccc;
+      --disabled: #111;
+  }
+}
+
+@media (prefers-color-scheme:dark) {
+  :root {
+      color-scheme: dark;
+      --bg: EAF7FB;
+      --accent-bg: #2b2b2b;
+      --text: #dcdcdc;
+      --text-light: #ababab;
+      --accent: #016273;
+      --accent-hover: #2995A7;
+      --accent-text: var(--bg);
+      --code: #f06292;
+      --preformatted: #ccc;
+      --disabled: #111;
+  }
+}
+
+ul {
     list-style-type: none;
-  }
+}
+
+.expense-item {
+  background-color: #EAF7FB;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  color: #1D1D1D;
+  font-family: "Inria Serif";
+}
